Back In Time

Version 0.9.18
* GNOME & KDE4: MainWindow - Files view: if the current directory don't exists in current snapshot display a message
* SettingDialog: add an expert option to enable to schedule automatic backups per directory
* SettingDialog: schedule automatic backups - if the application can't find crontab it show an error
* SettingDialog: if the application can't write in snapshots directory there should be an error message
* add Polish translation (Paweł Hołuj <pholuj@gmail.com>)
* add cron in common package dependencies
* GNOME & KDE4: rework settings dialog
* SettingDialog: add an option to enable/disable notifications

Version 0.9.16.1
* fix a bug/crush for French version

Version 0.9.16
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* add Slovak translation (Tomáš Vadina <kyberdev@gmail.com>)
* update Swedish translation (Niklas Grahn <terra.unknown@yahoo.com>)
* update French translation (Michel Corps <mahikeulbody@gmail.com>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* update Slovenian translation (Vanja Cvelbar <cvelbar@gmail.com>)
* don't show the snapshot that is being taken in snapshots list
* GNOME & KDE4: when the application starts and snapshots directory don't exists show a messagebox
* give more information for 'take snapshot' progress (to prove that is not blocked)
* MainWindow: rename 'Timeline' column with 'Snapshots'
* when it tries to take a snapshot if the snapshots directory don't exists
  (it is on a removable drive that is not plugged) it will notify and wait maximum 30 seconds 
  (for the drive to be plugged)
* GNOME & KDE4: add notify if the snapshots directory don't exists
* KDE4: rework MainWindow

Version 0.9.14
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* update Swedish translation (Niklas Grahn <terra.unknown@yahoo.com>)