@@ -1,0 +1,11 @@
+[Desktop Entry]
+Name=Back In Time (root)
+Exec=gksu backintime-gnome
+Icon=gtk-save
+Terminal=false
+X-MultipleArgs=false
+Type=Application
+StartupNotify=true
+Categories=GNOME;GTK;System;
+Comment=Simple backup system
+Comment[sl]=Enostaven sistem ustvarjanja varnostnih kopij
