@@ -1,0 +1,11 @@
+[Desktop Entry]
+Name=Back In Time (root)
+Exec=kdesudo -c backintime-kde4
+Icon=document-save
+Terminal=false
+X-MultipleArgs=false
+Type=Application
+StartupNotify=true
+Categories=Qt;KDE;System;
+Comment=Simple backup system
+Comment[sl]=Enostaven sistem ustvarjanja varnostnih kopij
