@@ -1,10 +1,10 @@
 Package: backintime-gnome
-Version: 0.9.17alpha3
+Version: 0.9.17alpha4
 Priority: optional
 Section: gnome
 Maintainer: Oprea Dan <dan@le-web.org>
 Architecture: all
-Depends: python-glade2, python-gnome2, python-notify, meld, backintime-common (= 0.9.17alpha3)
+Depends: python-glade2, python-gnome2, python-notify, meld, gksu, backintime-common (= 0.9.17alpha4)
 Description: Simple backup system for GNOME Desktop
  This is a GNOME GUI frontend for backintime-common.
 
