@@ -1,10 +1,10 @@
 Package: backintime-kde4
-Version: 0.9.17alpha3
+Version: 0.9.17alpha4
 Priority: optional
 Section: kde4
 Maintainer: Oprea Dan <dan@le-web.org>
 Architecture: all
-Depends: x11-utils, python-kde4 (>= 4.1), backintime-common (= 0.9.17alpha3)
+Depends: x11-utils, kdesudo, python-kde4 (>= 4.1), backintime-common (= 0.9.17alpha4)
 Suggests: kompare
 Description: Simple backup system for KDE4 Desktop
  This is a KDE4 (>= 4.1) GUI frontend for backintime-common.
