@@ -3,8 +3,8 @@
 <!ENTITY legal SYSTEM "legal.xml">
 <!ENTITY appname "Back In Time">
 <!ENTITY app "<application>&appname;</application>">
-<!ENTITY appversion "0.9.17alpha3">
-<!ENTITY manrevision "0.9.17alpha3">
+<!ENTITY appversion "0.9.17alpha4">
+<!ENTITY manrevision "0.9.17alpha4">
 <!ENTITY date "November 2008">
 ]>
 <!--
