@@ -5,7 +5,7 @@
     <maintainer>(Oprea Dan)</maintainer>
     <title>Back In Time Manual</title>
     <date>November 2008</date>
-    <version identifier="Back In Time Manual 0.9.17alpha3" date="November 2008"/>
+    <version identifier="Back In Time Manual 0.9.17alpha4" date="November 2008"/>
     <subject category="GNOME|Applications|System Tools"/>
     <description>
 		Back In Time is a simple backup system for GNOME desktop.
