@@ -1,6 +1,7 @@
 Back In Time
 
 Version 0.9.18
+* GNOME & KDE4: add root mode menu entries (use gksu for gnome and kdesudo for kde)
 * GNOME & KDE4: MainWindow - Files view: if the current directory don't exists in current snapshot display a message
 * SettingDialog: add an expert option to enable to schedule automatic backups per directory
 * SettingDialog: schedule automatic backups - if the application can't find crontab it show an error
